<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:padding="10dp"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:textColor="#9C27B0"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:id="@+id/btn1"
        android:backgroundTint="@color/H"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn2"
        android:backgroundTint="@color/UW"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn3"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/OW"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btn4"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn4"
        android:backgroundTint="@color/Ob"/>


</LinearLayout>