<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/Ob"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob1"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dark_theme"
        android:padding="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob2"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/dark_theme"
        android:padding="18dp"/>

</LinearLayout>